Fix:overflowx

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,11 @@ body {
   font-family: "Poppins", "Noto Sans KR", -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
-
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
 html,
 body,
 div,
